--- a/assets/style.css
+++ b/assets/style.css
@@ -13,9 +13,12 @@ body {
   background-color: #1e212b;
 }
 
-.start-btn,
+.start_quiz,
 .info-box,
 .quiz-box {
+  width: 55rem;
+  background-color: #fff;
+  border-radius: 9px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -23,26 +26,38 @@ body {
   transition: all 0.5s ease-in;
 }
 
-.start-btn button {
+.start_quiz {
+  display: flex;
+  flex-direction: column;
+  gap: 6.4rem;
+  align-items: center;
+  padding: 1.8rem 3.6rem;
+}
+
+.start_quiz h1 {
+  font-size: 4.8rem;
+  font-weight: 800;
+  color: #1e212b;
+  padding: 2.4rem;
+  text-align: center;
+}
+
+.start_quiz button {
   font-size: 2.5rem;
   font-weight: 700;
-  color: #1e212b;
-  background-color: #fff;
+  color: #fff;
+  background-color: #353740;
   border: none;
   border-radius: 9px;
   cursor: pointer;
   padding: 1.6rem 3.2rem;
 }
 
-.start-btn button:hover {
+.start_quiz button:hover {
   background-color: #1e212b;
-  color: #fff;
 }
 
 .info-box {
-  width: 50rem;
-  background-color: #fff;
-  border-radius: 9px;
   display: none;
 }
 
@@ -109,7 +124,137 @@ button.exit-quiz:hover {
 }
 
 .quiz-box {
-  width: 60rem;
-  background-color: #fff;
+  display: none;
+}
+
+.quiz-box header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.6rem 3.2rem;
+  border-bottom: 0.5px solid #787a80;
+  margin-bottom: 2.4rem;
+  height: 8rem;
+}
+
+.quiz-box header h2 {
+  font-size: 3.2rem;
+  font-weight: 700;
+  color: #1e212b;
+  user-select: none;
+}
+
+.timer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
   border-radius: 9px;
+  background-color: #e9e9ea;
+  gap: 1.2rem;
+}
+
+.timer_text {
+  font-size: 1.8rem;
+  font-weight: 600;
+  user-select: none;
+}
+
+.timer_sec {
+  font-size: 1.8rem;
+  font-weight: 700;
+  user-select: none;
+}
+
+.quiz-box section {
+  padding: 0 3.2rem;
+}
+
+.quiz-box section .question {
+  font-size: 2.4rem;
+  font-weight: 700;
+  color: #353740;
+  user-select: none;
+}
+
+section .option_list {
+  padding: 2rem 0;
+  display: block;
+}
+
+.option {
+  background-color: #e9e9ea;
+  border: 1px solid #a5a6aa;
+  border-radius: 6px;
+  padding: 1.2rem 2.4rem;
+  margin-bottom: 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  font-size: 1.8rem;
+  user-select: none;
+}
+.option:hover {
+  color: #fff;
+  background-color: #353740;
+}
+
+.option:last-child {
+  margin-bottom: 0;
+}
+
+.option .icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  pointer-events: none;
+}
+
+.correct {
+  color: #26b626;
+}
+
+.wrong {
+  color: #e20909;
+}
+
+.quiz-box footer {
+  height: 6rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 3.2rem;
+  border-top: 0.5px solid #787a80;
+}
+
+.total_question span {
+  display: flex;
+  user-select: none;
+  font-size: 1.6rem;
+  color: #353740;
+}
+
+.total_question span p {
+  font-weight: 600;
+  padding: 0 0.3rem;
+  text-align: center;
+}
+
+.total_question span p:first-child {
+  padding-left: 0;
+}
+
+.next_btn {
+  padding: 1.2rem 2.4rem;
+  background-color: #353740;
+  color: #fff;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  user-select: none;
+}
+
+.next_btn:hover {
+  background-color: #1e212b;
 }
