--- a/assets/style.css
+++ b/assets/style.css
@@ -60,8 +60,8 @@ body {
 }
 
 .info-box {
-  /* display: none; */
-  opacity: 0;
+  display: none;
+  /* opacity: 0; */
 }
 
 .info-box .info-title {
@@ -128,8 +128,8 @@ button.exit-quiz:hover {
 }
 
 .quiz-box {
-  /* display: none; */
-  opacity: 0;
+  display: none;
+  /* opacity: 0; */
 }
 
 .quiz-box header {
@@ -272,7 +272,7 @@ section .option_list {
   flex-direction: column;
   text-align: center;
   gap: 2.4rem;
-  opacity: 0;
+  /* opacity: 0; */
 }
 
 .result_box .icon {
