--- a/assets/style.css
+++ b/assets/style.css
@@ -272,6 +272,7 @@ section .option_list {
   flex-direction: column;
   text-align: center;
   gap: 2.4rem;
+  display: none;
   /* opacity: 0; */
 }
 
