--- a/assets/style.css
+++ b/assets/style.css
@@ -109,7 +109,9 @@ body {
   border-top: 1px solid #787a80;
 }
 
-.buttons button {
+.buttons button,
+.restart-quiz,
+.quit-quiz {
   margin: 0 0.5rem;
   padding: 1rem 2rem;
   font-size: 1.6rem;
@@ -121,17 +123,20 @@ body {
   transition: all 0.3s ease-in;
 }
 
-button.continue-quiz {
+button.continue-quiz,
+.restart-quiz {
   background-color: #353740;
   color: #fff;
 }
 
-button.continue-quiz:hover {
+button.continue-quiz:hover,
+.restart-quiz:hover {
   background-color: #1e212b;
   color: #fff;
 }
 
-button.exit-quiz:hover {
+button.exit-quiz:hover,
+.quit-quiz:hover {
   background-color: #1e212b;
   color: #fff;
 }
@@ -149,6 +154,7 @@ button.exit-quiz:hover {
   border-bottom: 0.5px solid #787a80;
   margin-bottom: 2.4rem;
   height: 8rem;
+  position: relative;
 }
 
 .quiz-box header h2 {
@@ -191,6 +197,16 @@ button.exit-quiz:hover {
   user-select: none;
 }
 
+.quiz-box header .time-line {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 55rem;
+  height: 3px;
+  background-color: #1e212b;
+  transition: width 0.1s linear;
+}
+
 section .option_list {
   padding: 2rem 0;
   display: block;
@@ -225,11 +241,11 @@ section .option_list {
 }
 
 .correct {
-  color: #26b626;
+  color: #1abf1a;
 }
 
 .wrong {
-  color: #e20909;
+  color: #e30b0b;
 }
 
 .disabled {
@@ -264,6 +280,7 @@ section .option_list {
 }
 
 .next_btn {
+  display: none;
   padding: 1.2rem 2.4rem;
   background-color: #353740;
   color: #fff;
@@ -284,14 +301,14 @@ section .option_list {
   justify-content: space-between;
   flex-direction: column;
   text-align: center;
-  gap: 2.4rem;
-  display: none;
-  /* opacity: 0; */
+  gap: 3.6rem;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .result_box .icon {
-  height: 10rem;
-  width: 10rem;
+  height: 12rem;
+  width: 12rem;
   color: #353740;
 }
 
